--- a/notebooks/Predict on unknown.ipynb
+++ b/notebooks/Predict on unknown.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 86,
    "id": "c07e657f",
    "metadata": {},
    "outputs": [],
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 87,
    "id": "473157fd",
    "metadata": {},
    "outputs": [],
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 88,
    "id": "f294c13c",
    "metadata": {},
    "outputs": [],
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 89,
    "id": "c5490cc4",
    "metadata": {},
    "outputs": [],
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 90,
    "id": "f58b1783",
    "metadata": {},
    "outputs": [],
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 91,
    "id": "6156e55b",
    "metadata": {},
    "outputs": [],
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 92,
    "id": "2c4ddf87",
    "metadata": {},
    "outputs": [
@@ -131,7 +131,7 @@
        "4  13.png"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 92,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -142,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 93,
    "id": "e2bd8f26",
    "metadata": {},
    "outputs": [],
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 94,
    "id": "00ce3da6",
    "metadata": {},
    "outputs": [],
@@ -166,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 95,
    "id": "2eb41f47",
    "metadata": {},
    "outputs": [],
@@ -176,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 96,
    "id": "da6c2be7",
    "metadata": {},
    "outputs": [],
@@ -189,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 97,
    "id": "4b6f2219",
    "metadata": {},
    "outputs": [],
@@ -199,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 98,
    "id": "8c6a3e0c",
    "metadata": {},
    "outputs": [
@@ -209,7 +209,7 @@
        "(50, 128, 128, 1)"
       ]
      },
-     "execution_count": 77,
+     "execution_count": 98,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -220,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 99,
    "id": "7368d1ef",
    "metadata": {},
    "outputs": [],
@@ -230,17 +230,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 100,
    "id": "493c75d4",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "WARNING:tensorflow:5 out of the last 9 calls to <function Model.make_predict_function.<locals>.predict_function at 0x000001FCBE50B5E0> triggered tf.function retracing. Tracing is expensive and the excessive number of tracings could be due to (1) creating @tf.function repeatedly in a loop, (2) passing tensors with different shapes, (3) passing Python objects instead of tensors. For (1), please define your @tf.function outside of the loop. For (2), @tf.function has experimental_relax_shapes=True option that relaxes argument shapes that can avoid unnecessary retracing. For (3), please refer to https://www.tensorflow.org/guide/function#controlling_retracing and https://www.tensorflow.org/api_docs/python/tf/function for  more details.\n"
+     ]
+    }
+   ],
    "source": [
     "y_pred = model.predict(Y_features)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 101,
    "id": "cfc84d48",
    "metadata": {},
    "outputs": [],
@@ -250,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 102,
    "id": "ba677d09",
    "metadata": {},
    "outputs": [],
@@ -261,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 103,
    "id": "a0aa29ce",
    "metadata": {},
    "outputs": [],
@@ -271,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 104,
    "id": "b2f317f2",
    "metadata": {},
    "outputs": [
@@ -304,7 +312,7 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>1.png</td>\n",
-       "      <td>sick</td>\n",
+       "      <td>normal</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -329,7 +337,7 @@
        "    <tr>\n",
        "      <th>5</th>\n",
        "      <td>14.png</td>\n",
-       "      <td>sick</td>\n",
+       "      <td>normal</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
@@ -344,7 +352,7 @@
        "    <tr>\n",
        "      <th>8</th>\n",
        "      <td>17.png</td>\n",
-       "      <td>sick</td>\n",
+       "      <td>normal</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
@@ -354,12 +362,12 @@
        "    <tr>\n",
        "      <th>10</th>\n",
        "      <td>19.png</td>\n",
-       "      <td>sick</td>\n",
+       "      <td>normal</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>11</th>\n",
        "      <td>2.png</td>\n",
-       "      <td>sick</td>\n",
+       "      <td>normal</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>12</th>\n",
@@ -384,7 +392,7 @@
        "    <tr>\n",
        "      <th>16</th>\n",
        "      <td>24.png</td>\n",
-       "      <td>sick</td>\n",
+       "      <td>normal</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>17</th>\n",
@@ -399,7 +407,7 @@
        "    <tr>\n",
        "      <th>19</th>\n",
        "      <td>27.png</td>\n",
-       "      <td>sick</td>\n",
+       "      <td>normal</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>20</th>\n",
@@ -449,7 +457,7 @@
        "    <tr>\n",
        "      <th>29</th>\n",
        "      <td>36.png</td>\n",
-       "      <td>sick</td>\n",
+       "      <td>normal</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>30</th>\n",
@@ -459,7 +467,7 @@
        "    <tr>\n",
        "      <th>31</th>\n",
        "      <td>38.png</td>\n",
-       "      <td>sick</td>\n",
+       "      <td>normal</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>32</th>\n",
@@ -524,7 +532,7 @@
        "    <tr>\n",
        "      <th>44</th>\n",
        "      <td>5.png</td>\n",
-       "      <td>normal</td>\n",
+       "      <td>sick</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>45</th>\n",
@@ -549,7 +557,7 @@
        "    <tr>\n",
        "      <th>49</th>\n",
        "      <td>9.png</td>\n",
-       "      <td>sick</td>\n",
+       "      <td>normal</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -557,26 +565,26 @@
       ],
       "text/plain": [
        "   im_path category\n",
-       "0    1.png     sick\n",
+       "0    1.png   normal\n",
        "1   10.png     sick\n",
        "2   11.png   normal\n",
        "3   12.png     sick\n",
        "4   13.png   normal\n",
-       "5   14.png     sick\n",
+       "5   14.png   normal\n",
        "6   15.png   normal\n",
        "7   16.png     sick\n",
-       "8   17.png     sick\n",
+       "8   17.png   normal\n",
        "9   18.png     sick\n",
-       "10  19.png     sick\n",
-       "11   2.png     sick\n",
+       "10  19.png   normal\n",
+       "11   2.png   normal\n",
        "12  20.png     sick\n",
        "13  21.png   normal\n",
        "14  22.png     sick\n",
        "15  23.png   normal\n",
-       "16  24.png     sick\n",
+       "16  24.png   normal\n",
        "17  25.png   normal\n",
        "18  26.png     sick\n",
-       "19  27.png     sick\n",
+       "19  27.png   normal\n",
        "20  28.png     sick\n",
        "21  29.png   normal\n",
        "22   3.png   normal\n",
@@ -586,9 +594,9 @@
        "26  33.png   normal\n",
        "27  34.png     sick\n",
        "28  35.png   normal\n",
-       "29  36.png     sick\n",
+       "29  36.png   normal\n",
        "30  37.png   normal\n",
-       "31  38.png     sick\n",
+       "31  38.png   normal\n",
        "32  39.png   normal\n",
        "33   4.png     sick\n",
        "34  40.png     sick\n",
@@ -601,15 +609,15 @@
        "41  47.png   normal\n",
        "42  48.png     sick\n",
        "43  49.png   normal\n",
-       "44   5.png   normal\n",
+       "44   5.png     sick\n",
        "45  50.png     sick\n",
        "46   6.png     sick\n",
        "47   7.png   normal\n",
        "48   8.png     sick\n",
-       "49   9.png     sick"
+       "49   9.png   normal"
       ]
      },
-     "execution_count": 83,
+     "execution_count": 104,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -620,7 +628,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 105,
    "id": "fc4e2ef2",
    "metadata": {},
    "outputs": [],
@@ -630,7 +638,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 106,
    "id": "d0cd6c5d",
    "metadata": {},
    "outputs": [],
